@@ -1,3 +1,8 @@
+2011-10-08  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/47844
+	* gfortran.dg/pointer_function_result_1.f90 : New test.
+
 2011-10-07  David S. Miller  <davem@davemloft.net>
 
 	PR 50655
